Put in a about me, Probably temp. Will work on more stuff later. I am tired..

--- a/index.html
+++ b/index.html
@@ -34,31 +34,33 @@
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a class="btn btn-link-3" href="/index.html">Home</a></li>
-                        <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
-                        <li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>
+                    <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
+                    <!--<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>-->
                         <li><a class="btn btn-link-3" href="https://discord.gg/eeTCHd7Jvu">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-
-	<about>
-		<style>
-			<center>
-			div {
-			  background: red;
-			  : 10px;  
-			}
-			</style>
-		<div>This is a div element. It has some text.</div>
-		</center>
-	</about>
+		
+		<about>
+			<div class="about">
+			<div>
+				<p>Hello and welcome, You may call me Tay. I am a fan of Jschlatt & Isaacwhy on YouTube, I am also a fan of the Fallout game series.</p>
+			</div>
+			<div>
+				<p>I like to do stuff involving messing around with making basic Discord bots, Building discord servers, Or making full fledged Minecraft server setups.</p>
+			</div>
+			<div>
+				<p>Please do note that I will NOT be selling any of my work, As I personally think its not as good quality as others, All of my work are passion projects.</p>
+			</div>
+		</div>
+		</about>
 		
         <footer>
 	        <div class="container">
 	        	<div class="row">
-                    	&copy; 2024 TayRP. All rights reserved.
+                    	&copy; <b>2024 TayRP. All rights reserved.</b>
                 </div>
 	        </div>
         </footer>
