Added link to the github repository.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
         <footer>
 	        <div class="container">
 	        	<div class="row">
-                    	&copy; <b>2024 TayRP. All rights reserved.</b>
+                    	&copy; <b>2024 
+							<a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved.</b>
                 </div>
 	        </div>
         </footer>
-
-          
