--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a class="btn btn-link-3" href="/">Home</a></li>
+					<!--<li><a class="btn btn-link-3" href="/">Home</a></li>-->
                     <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
-                    <!--<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>-->
+						<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>
                         <li><a class="btn btn-link-3" href="https://discord.gg/eeTCHd7Jvu">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
