--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a class="btn btn-link-3" href="/">Home</a></li>
                     <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
-                    <!--<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>-->
+					<!--<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>-->
                         <li><a class="btn btn-link-3" href="https://discord.gg/eeTCHd7Jvu">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
@@ -48,6 +48,7 @@
 			<div>
 				<p>Here will be information about my current projects.</p>
 			</div>
+				<p>My only current project is <a href="https://meadows-sakura.vercel.app/">Meadows</a></p>
 			<div>
 			</div>
 		</div>
