--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">tayrp.github.io</a>
+					<a class="navbar-brand" href="/">tayrp.github.io</a>
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
