--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="/">tayrp.github.io</a>
+					<link rel="home" href="https://tay.is-a.dev/index.html" />
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
