Attempt at removing file extensions from urls

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="/">tay.is-a.dev</a>
-					<link rel="home" href="https://tay.is-a.dev/index.html" />
+					<link rel="home" href="./" />
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
 					<!--<li><a class="btn btn-link-3" href="/">Home</a></li>-->
                     <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
-						<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>
+						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
                         <li><a class="btn btn-link-3" href="https://discord.gg/eeTCHd7Jvu">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
