--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">tay.is-a.dev</a>
+					<a class="navbar-brand" href="./projects">tay.is-a.dev</a>
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
