--- a/discord.html
+++ b/discord.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <body>
-        <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
+        <a class="navbar-brand" href="./discord">tay.is-a.dev</a>
         <!DOCTYPE html>
         <html>
           <head>
