--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<!--<li><a class="btn btn-link-3" href="/">Home</a></li>-->
                     <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
 						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
-                        <li><a class="btn btn-link-3" href="https://discord.gg/eeTCHd7Jvu">Discord</a></li>
+                        <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
 				</div>
