Added a embed page to test embeds on discord, etc.

--- a/embed.html
+++ b/embed.html
@@ -44,16 +44,13 @@
 			</div>
 		</nav>
 		
-		<about>
-			<div class="about">
-			<div>
-				<p>Here will be information about my current projects.</p>
+		<embed>
+			<div class="embedone">
+				<iframe width="1108" height="623"
+				src="https://www.youtube.com/embed/D4YATrhsoys">
+				</iframe>
 			</div>
-				<p>My only current project is <a href="https://meadows-sakura.vercel.app/">Meadows</a></p>
-			<div>
-			</div>
-		</div>
-		</about>
+			</embed>
 		
         <footer>
 	        <div class="container">
