--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
 		</div>
 		</about>
 		
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/66733e3819f6c616eadc0ef4/1i0p2m2rb';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
+
         <footer>
 	        <div class="container">
 	        	<div class="row">
