Updated html file.....

--- a/other/internet-archive/ClassicWhoArchives.html
+++ b/other/internet-archive/ClassicWhoArchives.html
@@ -1,28 +1,38 @@
-# Links to Doctor Who (1963 - 1996)
-https://archive.org/details/doctorwho_s01
-https://archive.org/details/doctorwho_s02
-https://archive.org/details/doctorwho_s03_v2
-https://archive.org/details/doctorwho_s04
-https://archive.org/details/doctorwho_s05
-https://archive.org/details/doctorwho_s06
-https://archive.org/details/doctorwho_s07
-https://archive.org/details/doctorwho_s08
-https://archive.org/details/doctorwho-s09
-https://archive.org/details/doctorwho-s10
-https://archive.org/details/doctorwho-s11
-https://archive.org/details/doctorwho-s12
-https://archive.org/details/doctorwho-s13
-https://archive.org/details/doctorwho-s14
-https://archive.org/details/doctorwho-s15
-https://archive.org/details/doctorwho-s16
-https://archive.org/details/doctorwho-s17
-https://archive.org/details/doctorwho-s18
-https://archive.org/details/doctorwho-s19
-https://archive.org/details/doctorwho-s20
-https://archive.org/details/doctorwho-s21
-https://archive.org/details/doctorwho-s22
-https://archive.org/details/doctorwho-s23
-https://archive.org/details/doctorwho-s24
-https://archive.org/details/doctorwho-s25
-https://archive.org/details/doctorwho-s26
-https://archive.org/details/doctorwhotelevisionmovie
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Links to Doctor Who (1963 - 1996)</title>
+</head>
+<body>
+    <h1>Links to Doctor Who (1963 - 1996)</h1>
+    <ul>
+        <li><a href="https://archive.org/details/doctorwho_s01">Doctor Who: Season 1</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s02">Doctor Who: Season 2</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s03_v2">Doctor Who: Season 3</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s04">Doctor Who: Season 4</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s05">Doctor Who: Season 5</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s06">Doctor Who: Season 6</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s07">Doctor Who: Season 7</a></li>
+        <li><a href="https://archive.org/details/doctorwho_s08">Doctor Who: Season 8</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s09">Doctor Who: Season 9</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s10">Doctor Who: Season 10</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s11">Doctor Who: Season 11</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s12">Doctor Who: Season 12</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s13">Doctor Who: Season 13</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s14">Doctor Who: Season 14</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s15">Doctor Who: Season 15</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s16">Doctor Who: Season 16</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s17">Doctor Who: Season 17</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s18">Doctor Who: Season 18</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s19">Doctor Who: Season 19</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s20">Doctor Who: Season 20</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s21">Doctor Who: Season 21</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s22">Doctor Who: Season 22</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s23">Doctor Who: Season 23</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s24">Doctor Who: Season 24</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s25">Doctor Who: Season 25</a></li>
+        <li><a href="https://archive.org/details/doctorwho-s26">Doctor Who: Season 26</a></li>
+        <li><a href="https://archive.org/details/doctorwhotelevisionmovie">Doctor Who: Television Movie</a></li>
+    </ul>
+</body>
+</html>
