Updated html file.

--- a/other/internet-archive/ClassicWhoArchives.html
+++ b/other/internet-archive/ClassicWhoArchives.html
@@ -1,4 +1,4 @@
-    <h1>Links to Doctor Who (1963 - 1996)</h1>
+    <h1>Doctor Who Archives (1963 - 1996)</h1>
     <ul>
         <li><a href="https://archive.org/details/doctorwho_s01">Doctor Who: Season 1</a></li>
         <li><a href="https://archive.org/details/doctorwho_s02">Doctor Who: Season 2</a></li>
