Updated html file?

--- a/other/internet-archive/ClassicWhoArchives.html
+++ b/other/internet-archive/ClassicWhoArchives.html
@@ -14,6 +14,72 @@
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.png">
+    
+    <style>
+        body {
+            background-color: #f0f8ff; /* Light blue background */
+            font-family: Arial, sans-serif;
+            padding-top: 70px; /* Space for the fixed navbar */
+        }
+
+        .navbar-inverse {
+            background-color: #333;
+            border-color: #333;
+        }
+
+        .navbar-inverse .navbar-brand {
+            color: #fff;
+        }
+
+        .navbar-inverse .navbar-nav > li > a {
+            color: #fff;
+        }
+
+        .container {
+            margin-top: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            margin: 10px 0;
+            font-size: 18px;
+        }
+
+        ul li a {
+            text-decoration: none;
+            color: #337ab7;
+            transition: color 0.3s;
+        }
+
+        ul li a:hover {
+            color: #23527c;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
