--- a/other/testing/new-index.html
+++ b/other/testing/new-index.html
@@ -17,7 +17,7 @@
     
     <style>
         body {
-            background-color: #b1cbcc; /* Light blue background? */
+            background-color: #f0f8ff; /* Light blue background */
             font-family: Arial, sans-serif;
             padding-top: 70px; /* Space for the fixed navbar */
         }
@@ -32,6 +32,15 @@
         }
 
         .navbar-inverse .navbar-nav > li > a {
+            color: #fff;
+            border-radius: 25px;
+            margin: 0 10px;
+            padding: 10px 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .navbar-inverse .navbar-nav > li > a:hover {
+            background-color: #23527c;
             color: #fff;
         }
 
@@ -86,7 +95,6 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
