--- a/other/internet-archive/ClassicWhoArchives.html
+++ b/other/internet-archive/ClassicWhoArchives.html
@@ -12,152 +12,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/animate.css">
-    <!-- Inline CSS -->
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
-        body {
-            font-family: 'Shantell Sans', sans-serif;
-            font-size: 16px;
-            font-weight: 300;
-            color: #888;
-            line-height: 30px;
-            text-align: center;
-            background-color: #36454F;
-            margin: 0;
-            padding: 0;
-        }
-
-        .navbar {
-            margin-bottom: 0;
-            padding-top: 0;
-            background: #444;
-            border: 0;
-            border-radius: 0;
-            transition: all .6s;
-        }
-
-        .navbar-no-bg {
-            padding-top: 10px;
-            background: none;
-        }
-
-        ul.navbar-nav {
-            font-family: 'Shantell Sans', sans-serif;
-            font-size: 14px;
-            color: #fff;
-            font-weight: 400;
-            text-transform: uppercase;
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .navbar-inverse ul.navbar-nav li {
-            display: inline;
-        }
-
-        .navbar-inverse ul.navbar-nav li a.btn-link-3 {
-            display: inline-block;
-            margin: 9px 0 0 15px;
-            padding: 6px 15px;
-            background: #b1cbcc;
-            border: 0;
-            font-family: 'Shantell Sans', sans-serif;
-            font-size: 14px;
-            font-weight: 300;
-            color: #fff;
-            text-transform: uppercase;
-            border-radius: 6px;
-            text-decoration: none;
-        }
-
-        .navbar-brand {
-            width: 102px;
-            background: url(../imgs/logo.png) left center no-repeat;
-            text-indent: -9999px;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 15px;
-        }
-
-        h1 {
-            color: #b1cbcc;
-            font-size: 28px;
-            margin-top: 20px;
-        }
-
-        .about {
-            text-align: center;
-            margin: 0 auto;
-            width: 1000px;
-            padding: 40px 20px;
-            color: #b1cbcc;
-            font-size: 22px;
-        }
-
-        .about ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .about li {
-            margin: 10px 0;
-        }
-
-        .about a {
-            color: #b1cbcc;
-            text-decoration: none;
-        }
-
-        .about a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            padding: 20px 0;
-            background: none;
-            color: #888;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer-copyright a {
-            color: #888;
-            border-bottom: 1px dotted #888;
-            text-decoration: none;
-        }
-
-        .footer-copyright a:hover, 
-        .footer-copyright a:focus {
-            color: #888;
-            border: none;
-        }
-
-        .center {
-            width: 500px;
-            margin: 0 auto;
-        }
-
-        /* Embed #1 */
-        .embedone {
-            width: 100%;
-            max-width: 1108px;
-            height: 623px;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            margin: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.png">
@@ -189,33 +44,51 @@
         </div>
     </nav>
     
-    <div class="container">
-        <h1>Classic Doctor Who Archives</h1>
+    <about>
         <div class="about">
             <div>
-                <p>Here are some links to various seasons and episodes of Doctor Who (1963 - 1996):</p>
-            </div>
-            <div>
+                <h2>Doctor Who (1963 - 1996)</h2>
                 <ul>
-                    <li><a href="https://archive.org/details/doctorwho_s01" target="_blank">Season 1</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s02" target="_blank">Season 2</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s03_v2" target="_blank">Season 3</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s04" target="_blank">Season 4</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s05" target="_blank">Season 5</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s06" target="_blank">Season 6</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s07" target="_blank">Season 7</a></li>
-                    <li><a href="https://archive.org/details/doctorwho_s08" target="_blank">Season 8</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s09" target="_blank">Season 9</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s10" target="_blank">Season 10</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s11" target="_blank">Season 11</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s12" target="_blank">Season 12</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s13" target="_blank">Season 13</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s14" target="_blank">Season 14</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s15" target="_blank">Season 15</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s16" target="_blank">Season 16</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s17" target="_blank">Season 17</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s18" target="_blank">Season 18</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s19" target="_blank">Season 19</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s20" target="_blank">Season 20</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s21" target="_blank">Season 21</a></li>
-                    <li><a href="https://archive.org/details/doctorwho-s22" target="_blank">Season 22</
+                    <li><a href="https://archive.org/details/doctorwho_s01">Season 01</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s02">Season 02</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s03_v2">Season 03</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s04">Season 04</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s05">Season 05</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s06">Season 06</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s07">Season 07</a></li>
+                    <li><a href="https://archive.org/details/doctorwho_s08">Season 08</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s09">Season 09</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s10">Season 10</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s11">Season 11</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s12">Season 12</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s13">Season 13</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s14">Season 14</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s15">Season 15</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s16">Season 16</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s17">Season 17</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s18">Season 18</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s19">Season 19</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s20">Season 20</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s21">Season 21</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s22">Season 22</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s23">Season 23</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s24">Season 24</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s25">Season 25</a></li>
+                    <li><a href="https://archive.org/details/doctorwho-s26">Season 26</a></li>
+                    <li><a href="https://archive.org/details/doctorwhotelevisionmovie">Television Movie</a></li>
+                </ul>
+            </div>
+        </div>
+    </about>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                &copy; <b>2024 
+                    <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved.</b>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
