--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
+						<li><a class="btn btn-link-3" href="./radio">Radio</a></li>
 					</ul>
 				</div>
 			</div>
