Chanded website titles on HTMLs

--- a/other/internet-archive/ClassicWhoArchives.html
+++ b/other/internet-archive/ClassicWhoArchives.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./">tay.is-a.dev</a>
+                <a class="navbar-brand" href="./">tay's website</a>
                 <link rel="home" href="./" />
             </div>
             <div class="collapse navbar-collapse" id="top-navbar-1">
