--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="./">tay.is-a.dev</a>
+					<a class="navbar-brand" href="./">tay's website</a>
 					<link rel="home" href="./" />
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -47,9 +47,9 @@
 		<about>
 			<div class="about">
 			<div>
-				<p>Here will be information about my current projects.</p>
+				<p>Here will be information about my projects.</p>
 			</div>
-				<p>My only current project is <a href="https://meadows-sakura.vercel.app/">Meadows</a></p>
+				<p>My Discord Bot project is <a href="https://meadows-sakura.vercel.app/">Meadows (Inactive)</a></p>
 			<div>
 			</div>
 		</div>
