Adding about.html and some css

--- a/pages.html
+++ b/pages.html
@@ -34,9 +34,9 @@
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a class="btn btn-link-3" href="/">Home</a></li>
-                    <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
-					<!--<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>-->
+					    <li><a class="btn btn-link-3" href="/">Home</a></li>
+                        <li><a class="btn btn-link-3" href="/about.html">About</a></li>
+						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
@@ -44,14 +44,14 @@
 			</div>
 		</nav>
 		
-		<embed>
-			<div class="embedone">
-				<iframe width="1108" height="623"
-				src="https://www.youtube.com/embed/D4YATrhsoys">
-				</iframe>
+		<pageslist>
+			<div class="pageslist">
+			<div>
+                <p>Here will be a list of pages on my website</p>
 			</div>
-			</embed>
-		
+		</div>
+		</pageslist>
+
         <footer>
 	        <div class="container">
 	        	<div class="row">
