--- a/pages.html
+++ b/pages.html
@@ -44,13 +44,13 @@
 			</div>
 		</nav>
 		
-		<pageslist>
-			<div class="pageslist">
+		<about>
+			<div class="about">
 			<div>
                 <p>Here will be a list of pages on my website</p>
 			</div>
 		</div>
-		</pageslist>
+		</about>
 
         <footer>
 	        <div class="container">
