--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-						<span class="sr-only">Navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -47,13 +46,7 @@
 		<about>
 			<div class="about">
 			<div>
-				<p>Hello and welcome, You may call me Tay. I am a fan of Jschlatt & Isaacwhy on YouTube, I am also a fan of the Fallout game series.</p>
-			</div>
-			<div>
-				<p>I like to do stuff involving messing around with making basic Discord bots, Building discord servers, Or making full fledged Minecraft server setups.</p>
-			</div>
-			<div>
-				<p>Please do note that I will NOT be selling any of my work, As I personally think its not as good quality as others, All of my work are passion projects.</p>
+				<p>Hello and Welcome, My name is Tee.</p>
 			</div>
 		</div>
 		</about>
