--- a/discord.html
+++ b/discord.html
@@ -34,7 +34,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="./">tay's website</a>
+					<a class="navbar-brand" href="./">tee's website</a>
 					<link rel="home" href="./" />
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
