--- a/projects.html
+++ b/projects.html
@@ -29,14 +29,13 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="./">tay's website</a>
+					<a class="navbar-brand" href="./">tee's website</a>
 					<link rel="home" href="./" />
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a class="btn btn-link-3" href="/">Home</a></li>
-                    <!--<li><a class="btn btn-link-3" href="/about.html">About</a></li>-->
-					<!--<li><a class="btn btn-link-3" href="/projects.html">Projects</a></li>-->
+                        <li><a class="btn btn-link-3" href="/about.html">About</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
@@ -44,16 +43,15 @@
 			</div>
 		</nav>
 		
-		<about>
-			<div class="about">
-			<div>
-				<p>Here will be information about my projects.</p>
-			</div>
-				<p>My Discord Bot project is <a href="https://meadows-sakura.vercel.app/">Meadows (Inactive)</a></p>
-			<div>
-			</div>
+		<pl>
+			<div class="pl">
+				<ul class="plul">
+					<b>Here is a list of all my projects, Such as my Modrinth projects</b>
+				<li><a href="https://modrinth.com/user/tay">Modrinth</a></li>
+				<!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
+			</ul>
 		</div>
-		</about>
+	</pl>
 		
         <footer>
 	        <div class="container">
