--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a class="btn btn-link-3" href="/">Home</a></li>
-                        <li><a class="btn btn-link-3" href="/about.html">About</a></li>
+						<li><a class="btn btn-link-3" href="./">Home</a></li>
+                        <li><a class="btn btn-link-3" href="./about.html">About</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
 					</ul>
@@ -46,8 +46,8 @@
 		<pl>
 			<div class="pl">
 				<ul class="plul">
-					<b>Here is a list of all my projects, Such as my Modrinth projects</b>
-				<li><a href="https://modrinth.com/user/tay">Modrinth</a></li>
+					<b>Here is a list of all my projects.</b>
+				<li><a href="https://modrinth.com/user/tay">Modrinth</a> - Mods, Modpacks, Datapacks, etc</li>
 				<!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
 			</ul>
 		</div>
