Setup 1.html, Soon to be about.html

--- a/discord.html
+++ b/discord.html
@@ -7,7 +7,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <head>
-                <title>tay.is-a.dev</title>
+                <title>tee's website</title>
                     <meta charset="UTF-8" />
                     <meta http-equiv="refresh" content="4; URL=https://discord.gg/xMdsWvqp7P" />
             <!-- Set to 4 so that visitors can see the timer when it hits 0 -->
