--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>tay.is-a.dev</title>
+        <title>tee's website</title>
 
         <!-- CSS -->        
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
