--- a/about-testing.html
+++ b/about-testing.html
@@ -13,11 +13,11 @@
 <link rel="stylesheet" href="assets/css/about.css">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="assets/imgs/favicon.png">
+<link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/1050531216589332581/73e637525488ab80dc081d8e8c696eb8">
 
 <body>
 
-<video autoplay loop id="myVideo">
+<video autoplay muted loop id="myVideo">
   <source src="https://index.havenmc.org/website/assets/mp4/usurper.mp4" type="video/mp4">
   This browser does not support HTML5 video or the server is offline.
 </video>
