--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
-                        <li><a class="btn btn-link-3" href="./about">About</a></li>
+                        <li><a class="btn btn-link-3" href="./about.html">About</a></li>
 						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
 						<li><a class="btn btn-link-3" href="./pages">Discord</a></li>
