Added new favicon and logo

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a class="btn btn-link-3" button id="aboutpauseBtn" onclick="togglePause()">⏸️</a></li>
-					    <li><a class="btn btn-link-3" href="/">Home</a></li>
+					    <li><a class="btn btn-link-3" href="./">Home</a></li>
 						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
