--- a/testing/index.html
+++ b/testing/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plow | Developer</title>
+    <title>tee's website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="Assets/img/icon.png" />
 </head>
 <body>
     <div class="content">
-        <h1>PlowDev</h1>
-        <p>Hey, i'm Plow! A new website developer.</p>
+        <h1>tayrp</h1>
+        <p>Heya! I'm Tee</p>
         <div id="images">
         <a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="Assets/img/discord.png" class="social-logo" alt="Discord"></a>
         <a href="https://github.com/tayrp" target="_blank"><img src="Assets/img/github.png" class="social-logo" alt="Github"></a>
