Updated about.html, Added some images

--- a/about.html
+++ b/about.html
@@ -13,9 +13,11 @@
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/about/style.css">
+		
 
         <!-- Favicon -->
-        <link rel="shortcut icon" href="assets/imgs/favicon.png">
+        <link rel="shortcut icon" href="assets//assets\imgs\favicon.png">
 
     </head>
 
@@ -43,11 +45,20 @@
 		<about>
 			<div class="about">
 			<div>
-				<video autoplay loop id="aboutvideo">
-					<source src="https://index.havenmc.org/website/assets/mp4/usurper.mp4" type="video/mp4">
-					This browser does not support HTML5 video or the server is offline.
-				  </video>
-				  
+				<body>
+					<div class="content">
+						<h1>Tee</h1>
+						<p>Heya! I'm Tee, A small creator</p>
+						<div id="images">
+						<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
+						<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="social-logo" alt="Github"></a>
+						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="assets/imgs/youtube.png" class="social-logo" alt="Twitter"></a>
+						</div>
+					</div>
+					<video autoplay loop id="aboutvideo">
+						<source src="https://index.havenmc.org/website/assets/mp4/usurper.mp4" type="video/mp4">
+						This browser does not support HTML5 video or the server is offline.
+					</video>
 				  <script>
 				  var video = document.getElementById("aboutvideo");
 				  var btn = document.getElementById("aboutpauseBtn");
