Updated htmls, Renmoved "html" from about url

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 				<body>
 					<div class="content">
 						<h1>Tee</h1>
-						<p>Heya! I'm Tee, A small creator</p>
+						<p>Heya! I'm Tee, A small Modrinth creator.</p>
 						<div id="images">
 						<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
 						<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="social-logo" alt="Github"></a>
