--- a/pages.html
+++ b/pages.html
@@ -35,7 +35,7 @@
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
 					    <li><a class="btn btn-link-3" href="./">Home</a></li>
-                        <li><a class="btn btn-link-3" href="./about.html">About</a></li>
+                        <li><a class="btn btn-link-3" href="./about">About</a></li>
 						<li><a class="btn btn-link-3" href="./projects">Projects</a></li>
                         <li><a class="btn btn-link-3" href="./discord">Discord</a></li>
                         <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
