--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" aboutcontent="IE=edge">
+        <meta name="viewport" aboutcontent="width=device-width, initial-scale=1">
         <title>tee's website</title>
 
         <!-- CSS -->        
@@ -42,10 +42,10 @@
 			<div class="about">
 				<div>
 					<body>
-						<div class="content">
+						<div class="aboutcontent">
 							<h1>Tee</h1>
 							<p>Heya! I'm Tee, A small Modrinth creator.</p>
-							<div id="images">
+							<div id="aboutimages">
 								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
 								<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="social-logo" alt="Github"></a>
 								<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="assets/imgs/youtube.png" class="social-logo" alt="YouTube"></a>
