--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets\css\about\style.css">
+		
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets//assets\imgs\favicon.png">
@@ -46,9 +48,9 @@
 							<h1>Tee</h1>
 							<p>Heya! I'm Tee, A small Modrinth creator.</p>
 							<div id="aboutimages">
-								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="aboutsocial-logo" alt="Discord"></a>
-								<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="aboutsocial-logo" alt="Github"></a>
-								<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="assets/imgs/youtube.png" class="aboutsocial-logo" alt="YouTube"></a>
+								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
+								<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="social-logo" alt="Github"></a>
+								<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="assets/imgs/youtube.png" class="social-logo" alt="YouTube"></a>
 							</div>
 						</div>
 			
