--- a/about.html
+++ b/about.html
@@ -2,18 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" aboutcontent="IE=edge">
-        <meta name="viewport" aboutcontent="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>tee's website</title>
 
         <!-- CSS -->        
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/animate.css">
-        <link rel="stylesheet" href="assets/css/style.css">
 		<link rel="stylesheet" href="assets\css\about\style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 		
-
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets//assets\imgs\favicon.png">
 
@@ -44,7 +43,7 @@
 			<div class="about">
 				<div>
 					<body>
-						<div class="aboutcontent">
+						<div class="content">
 							<h1>Tee</h1>
 							<p>Heya! I'm Tee, A small Modrinth creator.</p>
 							<div id="aboutimages">
