Button to my discord

--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
 							<div id="images">
 								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
 								<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="social-logo" alt="Github"></a>
+								<a href="https://discord.gg/gjypyNkPPp" target="_blank"><img src="assets/imgs/haven.png" class="social-logo" alt="Haven"></a>
 								<a href="https://www.youtube.com/@MystixMew" target="_blank"><img src="assets/imgs/youtube.png" class="social-logo" alt="YouTube"></a>
 							</div>
 						</div>
