--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 					<body>
 						<div class="content">
 							<h1>take the off centered person eating salad</h1>
-							<iframe width="570" height="300" src=iframe width="1920" height="1080" src="https://c.tenor.com/HZ_mu1zU3-UAAAAd/tenor.gif" frameborder="0"></iframe>
+							<iframe width="570" height="300" src="https://c.tenor.com/HZ_mu1zU3-UAAAAd/tenor.gif" frameborder="0" allowfullscreen style="margin-left: 35px;"></iframe>
 							<div id="images">
 								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
 								<a href="https://github.com/tayrp" target="_blank"><img src="assets/imgs/github.png" class="social-logo" alt="Github"></a>
