i fixed smthn, correctly works on mobile devices

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>tee's website</title>
-       
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>			
         <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/assets/css/animate.css">
 		<link rel="stylesheet" href="/assets/css/about/style.css">
 		<link rel="stylesheet" href="/assets/css/style.css">
-
         <link rel="shortcut icon" href="/assets/imgs/favicon.png">
-
     </head>
 
     <body>
@@ -28,7 +27,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">tee's website</a>
+					<a class="navbar-brand" href="/">Tee</a>
 					<link rel="home" href="/" />
 				</div>
 				<div class="collapse navbar-collapse" id="top-navbar-1">
