--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -15,6 +15,9 @@
 		<link rel="stylesheet" href="/assets/css/style.css">
 
         <link rel="shortcut icon" href="/assets/imgs/favicon.png">
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
 
     </head>
 
