--- a/public/about/index.html
+++ b/public/about/index.html
@@ -58,6 +58,7 @@
 								<a href="https://discord.gg/gjypyNkPPp" target="_blank"><img src="/assets/imgs/haven.png" class="social-logo" alt="Haven"></a>
 								<a href="https://www.last.fm/user/MystixMew" target="_blank"><img src="/assets/imgs/lastfm.png" class="social-logo" alt="Last.fm"></a>
 								<a href="https://www.youtube.com/@MystixMew" target="_blank"><img src="/assets/imgs/youtube.png" class="social-logo" alt="YouTube"></a>
+								<!-- <a class="btn btn-link-3" button id="aboutpauseBtn" onclick="togglePause()">⏸️</a></p> -->
 							</div>
 						</div>
 						<video autoplay loop id="aboutvideo">
@@ -67,7 +68,7 @@
 						
 						<label for="volumeControl">Volume:</label>
 						<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.01">
-						<span id="volumePercentage">1%</span>											
+						<span id="volumePercentage">1%</span>										
 			
 						<script>
 							var video = document.getElementById("aboutvideo");
