--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -3,12 +3,12 @@
     <div>
         <p>A list of all pages on my website.</p>
         <p>Some are hidden, Like eastereggs.</p>
-        <li><a href="/">Home</a> - Literally the home page.</li>
-        <li><a href="/about">About</a> - Literally the about page.</li>
-        <li><a href="/projects">Projects</a> - Literally the projects page.</li>
-        <li><a href="/discord">Discord</a> - Literally the discord page.</li>
-        <li><a href="/pages">Pages</a> - Literally this page.</li>
-        <li><a href="https://tayrp.substack.com/">Blog</a> - Literally the blog button.</li>
+        <li><a href="/">Home</a> - Takes you to my home page.</li>
+        <li><a href="/about">About</a> - Takes you to my About/Bio page.</li>
+        <li><a href="/projects">Projects</a> - Takes you to my Projects page.</li>
+        <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
+        <li><a href="/pages">Pages</a> - Takes you to this page.</li>
+        <li><a href="https://tayrp.substack.com/">Blog</a> - Takes you to my Substack.</li>
     </div>
 </div>
 </div>
