Adding timezone to my home page.

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -8,6 +8,7 @@
         <li><a href="/projects">Projects</a> - Takes you to my Projects page.</li>
         <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
         <li><a href="/pages">Pages</a> - Takes you to this page.</li>
+        <li><a href="/readme">README</a> - Takes you to my README page.</li>
         <li><a href="https://tayrp.substack.com/">Blog</a> - Takes you to my Substack.</li>
     </div>
 </div>
