Updated home page, Changed one word.

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <h3 id="date-time">time</h3>
             <script src="/assets/js/timezone.js"></script>
             <p>Hello and Welcome, My name is Tee.</p>
-            <p>I like to go by Tee, Rhea, or Kara.</p>
+            <p>I prefer to go by Tee, Rhea, or Kara.</p>
             <p style="font-size: 20px;">
                 <a href="https://nohello.net/en/">NoHello</a> |
                 <a href="https://dontasktoask.com/">DontAskToAsk</a> |
