--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Tee</a>
+				<a class="navbar-brand" href="/">
+					Tee
+					<img id="dcstat" alt="Status" width="75" style="margin-left: 55px; margin-top: -17px">
+					<script src="/assets/js/lanyard.js"></script>
+				</a>
 				<link rel="home" href="/" />
 			</div>
 			<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -51,6 +55,7 @@
             <script src="/assets/js/timezone.js"></script>
             <p>Hello and Welcome, My name is Tee.</p>
             <p>I prefer to go by Tee, Rhea, or Kara.</p>
+            <p>My preferred pronouns are She/They</p>
             <p style="font-size: 20px;">
                 <a href="https://nohello.net/en/">NoHello</a> |
                 <a href="https://dontasktoask.com/">DontAskToAsk</a> |
