--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -38,6 +38,7 @@
 					<li><a class="btn btn-link-3" href="/discord">Discord</a></li>
 					<li><a class="btn btn-link-3" href="/pages">Pages</a></li>
 					<li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
+					<script src="/assets/js/lanyard.js"></script>
 				</ul>
 			</div>
 		</div>
