--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 <main>
     <div class="about">
         <div>
-            <h4 id="date-time">time</h4>
+            <b id="date-time">time</b>
             <script src="/assets/js/timezone.js"></script>
             <p>Hello and Welcome, My name is Tee.</p>
             <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
@@ -62,7 +62,8 @@
                 <a href="https://nohello.net/en/">NoHello</a> |
                 <a href="https://dontasktoask.com/">DontAskToAsk</a> |
                 <a href="https://xyproblem.info/">XYProblem</a>
-                <h5>NOTE: Mocking me will result in a block, I don't care who you are.</h5>
+            
+            
             </p>
         </div>
     </div>
