Updated the images to be the same size?

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 				</button>
 				<a class="navbar-brand" href="/">
 					Tee
-					<img id="dcstat" alt="Status" width="75" style="margin-left: 55px; margin-top: -17px">
+					<img id="dcstat" alt="Status" width="75" style="margin-left: 55px; margin-top: -19.01px">
 					<script src="/assets/js/lanyard.js"></script>
 				</a>
 				<link rel="home" href="/" />
@@ -53,7 +53,7 @@
         <div>
             <b id="date-time">time</b>
             <script src="/assets/js/timezone.js"></script>
-            <p>Hello and Welcome, My name is Tee.</p>
+            <p>Hello and Welcome, You may call me Tee.</p>
             <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
             <p>My preferred pronouns are She/They</p>
             <p>Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.</p>
