--- a/content/about/index.html
+++ b/content/about/index.html
@@ -6,8 +6,9 @@
 			<body>
 				<div class="content">
 					<h1>Hiya, Call me Tee!</h1>
-					<iframe width="570" height="230" src="https://lanyard.cnrad.dev/api/1050531216589332581"
+					<iframe width="570" height="215" src="https://lanyard.cnrad.dev/api/1050531216589332581"
 						frameborder="0" allowfullscreen style="margin-left: 35px;"></iframe>
+						<h4>Someone told me I had shit taste in music when I showed them this song, So I put it on my website.</h4>
 					<div id="images">
 						<a href="https://discord.com/users/1050531216589332581" target="_blank"><img
 								src="/assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
