Reformatted some pages

--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -1,9 +1,12 @@
 <div>
-    <div class="pl">
-        <ul class="plul">
-            <b>Here is a list of all my projects.</b>
-            <li><a href="https://modrinth.com/user/tay">Modrinth</a> - Mods, Modpacks, Datapacks, etc</li>
-            <!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
-        </ul>
-    </div>
+  <div class="pl">
+    <ul class="plul">
+      <b>Here is a list of all my projects.</b>
+      <li>
+        <a href="https://modrinth.com/user/tay">Modrinth</a> - Mods, Modpacks,
+        Datapacks, etc
+      </li>
+      <!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
+    </ul>
+  </div>
 </div>
