Adding my Gitbook to pages

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -10,6 +10,10 @@
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
       <li><a href="/readme">README</a> - Takes you to my README page.</li>
       <li>
+        <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
+        website.
+      </li>
+      <li>
         <a href="https://tayrp.substack.com/">Blog</a> - Takes you to my
         Substack.
       </li>
