Added discussions, Using discus.

--- a/content/discord/index.html
+++ b/content/discord/index.html
@@ -1,3 +1,4 @@
+<main>
 <div>
     <div class="about">
         <div>
@@ -61,3 +62,4 @@
                     <h3 id="pageBeginCountdownText" class="clock">3</h3>
                     <p class="pp">Until Join</p>
                 </div>
+            </main>
