--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -1,4 +1,4 @@
-<div>
+<main>
   <div class="about">
     <div>
       <p>A list of all pages on my website.</p>
@@ -19,4 +19,4 @@
       </li>
     </div>
   </div>
-</div>
+</main>
