--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -1,4 +1,4 @@
-<div>
+<main>
   <div class="pl">
     <ul class="plul">
       <b>Here is a list of all my projects.</b>
@@ -9,4 +9,4 @@
       <!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
     </ul>
   </div>
-</div>
+</main>
