--- a/content/salad/index.html
+++ b/content/salad/index.html
@@ -1,4 +1,4 @@
-<div>
+<main>
   <div class="about">
     <div>
       <body>
@@ -20,4 +20,4 @@
       </body>
     </div>
   </div>
-</div>
+</main>
