--- a/public/discord/index.html
+++ b/public/discord/index.html
@@ -13,8 +13,8 @@
       href="/assets/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="/assets/css/animate.css" />
-    <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
     <script src="assets/js/disableFullscreen.js"></script>
   </head>
@@ -66,7 +66,8 @@
     </nav>
     
 
-<main><div>
+<main><main>
+<div>
     <div class="about">
         <div>
             <p>
@@ -128,7 +129,8 @@
                 <div class="dot" style="position: center">
                     <h3 id="pageBeginCountdownText" class="clock">3</h3>
                     <p class="pp">Until Join</p>
-                </div></main>
+                </div>
+            </main></main>
 
     <footer>
       <div class="container">
