--- a/public/index.html
+++ b/public/index.html
@@ -82,8 +82,22 @@
         <a href="https://nohello.net/en/">NoHello</a> |
         <a href="https://dontasktoask.com/">DontAskToAsk</a> |
         <a href="https://xyproblem.info/">XYProblem</a>
-        
-        
+        <script
+          src="https://giscus.app/client.js"
+          data-repo="tayrp/tayrp.github.io"
+          data-repo-id="R_kgDOLkMSbw"
+          data-category="Constructive Critism"
+          data-category-id="DIC_kwDOLkMSb84Ci9E6"
+          data-mapping="pathname"
+          data-strict="0"
+          data-reactions-enabled="0"
+          data-emit-metadata="1"
+          data-input-position="top"
+          data-theme="dark"
+          data-lang="en"
+          crossorigin="anonymous"
+          async
+        ></script>
       </p>
     </div>
   </div>
