--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -13,8 +13,8 @@
       href="/assets/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="/assets/css/animate.css" />
-    <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
     <script src="assets/js/disableFullscreen.js"></script>
   </head>
@@ -66,7 +66,7 @@
     </nav>
     
 
-<main><div>
+<main><main>
   <div class="about">
     <div>
       <p>A list of all pages on my website.</p>
@@ -87,7 +87,7 @@
       </li>
     </div>
   </div>
-</div>
+</main>
 </main>
 
     <footer>
