--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -13,8 +13,8 @@
       href="/assets/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="/assets/css/animate.css" />
-    <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
     <script src="assets/js/disableFullscreen.js"></script>
   </head>
@@ -66,7 +66,7 @@
     </nav>
     
 
-<main><div>
+<main><main>
   <div class="pl">
     <ul class="plul">
       <b>Here is a list of all my projects.</b>
@@ -77,7 +77,7 @@
       <!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
     </ul>
   </div>
-</div>
+</main>
 </main>
 
     <footer>
