Updated footer, Removed navbar specific font, etc

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -9,6 +9,7 @@
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
       <li><a href="/readme">README</a> - Takes you to my README page.</li>
+      <li><a href="https://hugo.mysty.one/">Local Website</a> - Takes you to my locally hosted version of this website.</li>
       <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
