--- a/public/about/index.html
+++ b/public/about/index.html
@@ -203,7 +203,7 @@
           &copy;
           <b
             >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved.</b
+            All rights reserved. Made with 🩷 by <a href="https://github.com/tayrp">Tee</a></b
           >
         </div>
       </div>
