--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -77,6 +77,7 @@
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
       <li><a href="/readme">README</a> - Takes you to my README page.</li>
+      <li><a href="https://hugo.mysty.one/">Local Website</a> - Takes you to my locally hosted version of this website.</li>
       <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
@@ -96,7 +97,7 @@
           &copy;
           <b
             >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved.</b
+            All rights reserved. Made with 🩷 by <a href="https://github.com/tayrp">Tee</a></b
           >
         </div>
       </div>
